[project]
name = "dev-tools"
version = "0.1.0"
description = "Small CLI helpers for development workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.15.0",
]

[project.scripts]
dev = "dev_tools.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
